--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -326,9 +326,8 @@
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdClienteContacto">Contacto</label>
-                    @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres_combo"), new { @class = "form-control", @id = "IdContacto" })
-                    @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
+                    <label for="DatosCliente">Información adicional</label>
+                    <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
                 </div>
             </div>
             <div class="col-md-3">
@@ -594,6 +593,7 @@
         ValidarGrid();
         ValidarCliente();
         Set_NivelDescuento_x_FormaPago();
+        cargar_contactos();
 
         $("#vt_tipo_venta").change(function () {
             get_info_termino_pago();
@@ -873,34 +873,34 @@
             error: function (error) {
                 alert(error);
             }
-
         });
-        cargar_contactos();
     }
 
     function cargar_contactos() {
-
-        $("#IdContacto").empty();
         var codigo = IdCliente.GetValue();
 
-        var datos = {
-            IdCliente: codigo
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_contactos", "Factura",new { Area = "Facturacion"})',
-            async: false,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $.each(data, function (i, row) {
-                    $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres_combo + "</option>");
-                });
-            },
-            error: function (error) {
+        if (codigo > 0)
+        {
+            var datos = {
+                IdCliente: codigo
             }
-        });
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("cargar_contactos", "Factura",new { Area = "Facturacion"})',
+                async: false,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#DatosCliente").val(data);
+                },
+                error: function (error) {
+                }
+            });
+        }
+        else{
+            $("#DatosCliente").val("");
+        }
     }
 
     function CargarPuntosDeVenta() {
