--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
@@ -18,7 +18,7 @@
         settings.Properties.Columns.Add("IdEntidad", "ID", 5);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente(); cargar_contactos();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_info_bajo_demanda)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_notaCreDeb_Info) ? "" : (Model == 0 ? "" : Model));
