--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
@@ -22,7 +22,7 @@
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 55);
         settings.Properties.Columns.Add("CodPersona", "Clase", 30);
         settings.Properties.FilterMinLength = 3;
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente(); ValidarCliente();}";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente(); ValidarCliente(); cargar_contactos();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demanda)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_factura_Info) ? "" : (Model == 0 ? "" : Model));
