--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -248,9 +248,22 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-primary" onclick="MostrarModal()">
-                <i class="fa fa-search"></i>
-            </button>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="MotiAnula">Motivo anulación*</label>
+                    @Html.TextAreaFor(q => q.MotiAnula, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotiAnula, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <button type="button" class="btn btn-primary" onclick="MostrarModal()">
+                    <i class="fa fa-search"></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="row">
