--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
@@ -165,9 +165,24 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $("#vt_serie1").val(data.Establecimiento);
-                $("#vt_serie2").val(data.PuntoEmision);
-                $("#vt_NumFactura").val(data.NumDocumento);
+                if (data.data_puntovta != null) {
+                    if (data.data_puntovta.EsElectronico == true) {
+                        $("#datos_punto_venta1").hide();
+                        $("#datos_punto_venta2").hide();
+                        $("#datos_punto_venta3").hide();
+                    }
+                    else {
+                        $("#datos_punto_venta1").show();
+                        $("#datos_punto_venta2").show();
+                        $("#datos_punto_venta3").show();
+
+                        if (data.data_talonario != null) {
+                            $("#vt_serie1").val(data.data_talonario.Establecimiento);
+                            $("#vt_serie2").val(data.data_talonario.PuntoEmision);
+                            $("#vt_NumFactura").val(data.data_talonario.NumDocumento);
+                        }
+                    }
+                }
             },
             error: function (error) {
             }
@@ -283,8 +298,9 @@
 @using (Html.BeginForm("Anular", "NotaDeDebitoFacturacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdSucursal)
-    @Html.HiddenFor(q => q.IdBodega)
+    @Html.HiddenFor(q => q.IdSucursal, new { @id = "IdSucursal" })
+    @Html.HiddenFor(q => q.IdBodega, new { @id = "IdBodega" })
+    @Html.HiddenFor(q => q.IdPuntoVta, new { @id = "IdPuntoVta" })
     @Html.HiddenFor(q => q.IdNota)
     @Html.HiddenFor(q => q.CodDocumentoTipo)
     @Html.HiddenFor(q => q.CreDeb)
@@ -342,14 +358,14 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdPuntoVta">Punto de venta*</label>
-                    @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
+                    @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -444,21 +460,21 @@
                             </div>
                         </div>
                         <div id="divNaturaleza" hidden>
-                            <div class="col-md-3">
+                            <div class="col-md-3" id="datos_punto_venta1">
                                 <div class="form-group">
                                     <label for="Serie1">Establecimiento*</label>
                                     @Html.TextBoxFor(q => q.Serie1, new { @class = "form-control", @id = "vt_serie1" })
                                     @Html.ValidationMessageFor(q => q.Serie1, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3" id="datos_punto_venta2">
                                 <div class="form-group">
                                     <label for="Serie2">Pto. Emisión*</label>
                                     @Html.TextBoxFor(q => q.Serie2, new { @class = "form-control", @id = "vt_serie2" })
                                     @Html.ValidationMessageFor(q => q.Serie2, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="datos_punto_venta3">
                                 <div class="form-group">
                                     <label for="NumNota_Impresa"># Documento*</label>
                                     @Html.TextBoxFor(q => q.NumNota_Impresa, new { @class = "form-control", @id = "vt_NumFactura" })
