--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
@@ -210,7 +210,7 @@
 
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contabilidad">
-            
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-6">
@@ -220,6 +220,10 @@
                                 @Html.ValidationMessageFor(q => q.IdCtaCble_CXP, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_Gasto">Cta. Cble. Gasto</label>
@@ -229,6 +233,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="IdCtaCble_Anticipo">Cta. Cble. Anticipo</label>
+                                @Html.Partial("_CmbCtaCbleAnticipo_Proveedor", Model.IdCtaCble_Anticipo)
+                                @Html.ValidationMessageFor(q => q.IdCtaCble_Anticipo, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
 
