--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio_det.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridViewPartial_orden_servicio_det";
         settings.CallbackRouteValues = new { Controller = "OrdenServicio", Action = "GridViewPartial_orden_servicio_det" };
-        settings.KeyFieldName = "SecuenciaTipo";
+        settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
