--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -420,6 +420,40 @@
                         <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_retenciones">
                             <div class="row">
                                 <div class="col-md-12">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label for="IdPuntoVta">Punto de venta*</label>
+                                            @Html.DropDownListFor(q => q.info_retencion.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
+                                            @Html.ValidationMessageFor(q => q.info_retencion.IdPuntoVta, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-2" id="datos_punto_venta1">
+                                        <div class="form-group">
+                                            <label for="vt_serie1">Establecimiento*</label>
+                                            @Html.TextBoxFor(q => q.info_retencion.serie1, new { @class = "form-control", @id = "serie1" })
+                                            @Html.ValidationMessageFor(q => q.info_retencion.serie1, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2" id="datos_punto_venta2">
+                                        <div class="form-group">
+                                            <label for="vt_serie2">Pto. Emisión*</label>
+                                            @Html.TextBoxFor(q => q.info_retencion.serie2, new { @class = "form-control", @id = "serie2" })
+                                            @Html.ValidationMessageFor(q => q.info_retencion.serie2, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2" id="datos_punto_venta3">
+                                        <div class="form-group">
+                                            <label for="vt_NumFactura"># Documento*</label>
+                                            @Html.TextBoxFor(q => q.info_retencion.NumRetencion, new { @class = "form-control", @id = "NumRetencion" })
+                                            @Html.ValidationMessageFor(q => q.info_retencion.NumRetencion, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="">Detalle retención*</label>
@@ -605,10 +639,19 @@
 }
 <script>
     ValidarCompraSucursales();
+    CargarPuntosDeVenta();
+    GetUltimoDocumento();
 
     $("#IdSucursal").change(function () {
         cargar_bodega();
+        CargarPuntosDeVenta();
+        GetUltimoDocumento();
     });
+
+    $("#IdPuntoVta").change(function () {
+        GetUltimoDocumento();
+    });
+
 
     $("#co_subtotal_iva").change(function () {
 
@@ -914,6 +957,66 @@
                 });
 
      };
-    
+
+    function CargarPuntosDeVenta() {
+        $("#IdPuntoVta").empty();
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarPuntosDeVenta", "Retencion",new { Area = "CuentasPorPagar" })',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                $.each(data, function (i, row) {
+                    $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
+                    $("#IdPuntoVta").val($("#IdPuntoVta option:first").val());
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function GetUltimoDocumento() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento", "Retencion",new { Area = "CuentasPorPagar" })',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.data_puntovta != null) {
+                    if (data.data_puntovta.EsElectronico == true) {
+                        $("#datos_punto_venta1").hide();
+                        $("#datos_punto_venta2").hide();
+                        $("#datos_punto_venta3").hide();
+                    }
+                    else {
+                        $("#datos_punto_venta1").show();
+                        $("#datos_punto_venta2").show();
+                        $("#datos_punto_venta3").show();
+
+                        if (data.data_talonario != null) {
+                            $("#serie1").val(data.data_talonario.Establecimiento);
+                            $("#serie2").val(data.data_talonario.PuntoEmision);
+                            $("#NumRetencion").val(data.data_talonario.NumDocumento);
+                        }
+                    }
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
 
